@@ -74,6 +74,7 @@ Manuel M. T. Chakravarty <chak@cse.unsw.edu.au>
 
 with contributions from (alphabetical order)
 
+Jens-Ulrik Petersen	 <juhp@01.246.ne.jp>
 Axel Simon               <simona_@web.de>
 Michael Weber		 <michael.weber@Post.RWTH-Aachen.DE>
 
