@@ -29,7 +29,7 @@ fi
 # default library and default system
 #
 lib_c2hs=yes
-sys=ghc4
+sys=@SYS@
 
 while test $# -gt 0; do
   case "$1" in
