@@ -255,6 +255,7 @@ AC_SUBST(DLSUFFIX)
 AC_SUBST(C2HS_VERSION)
 AC_SUBST(HCFLAGS)
 AC_SUBST(LIB_HCFLAGS)
+AC_SUBST(SYS)
 AC_SUBST(LEGACY_FFI)
 AC_SUBST(BEGIN_LEGACY_FFI)
 AC_SUBST(END_LEGACY_FFI)
