@@ -574,7 +574,7 @@ The GNU Free Documentation License is available at
 Important changes (especially those affecting the semantics of the tool) are
 documented in the following.
 
-<sect1>Version 0.9.3 "Blue Ginger"
+<sect1>Version 0.9.4 "Blue Ginger"
 <p>
 <itemize>
 <item>Added <tt/import/ hooks
