@@ -1,3 +1,10 @@
+2001-05-11  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>
+
+	* c2hs-config.in: Patch from Jens-Ulrik Petersen
+	<juhp@01.246.ne.jp> fixes $sys variable setting
+
+	* toplevel/Version.hs (versnum): 0.9.4
+
 2001-05-06  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>
 
 	* gen/GenBind.hs (extractCompType): rewrote that thing again
